# esp32-memory-limit

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
examples/: 01-alloc.rs  02-check-before-alloc.rs  03-try-reserve.rs  04-stack.rs  05-4kb-stack-overflow-protection-1kb-alloc.rs  06-2kb-stack-overflow-protection-1kb-alloc.rs  07-1kb-stack-overflow-protection-1kb-alloc.rs  08-alloc-stack.rs  09-alloc-stack-recursion.rs  10-allock-stack-with-watchdog.rs  11-300kb-alloc-stack-recursion.rs  12-alloc-stack-overflow-protection.rs  13-stack-pointer.rs
scenarios/debug/: 12-alloc-stack-overflow-protection.yaml
scenarios/release/: 01-alloc.yaml  02-check-before-alloc.yaml
src/: main.rs
