[package]
name = "esp32-memory-limit"
version = "0.1.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = { version = "1.1.2" }
# hal = { package = "esp32c3-hal", version = "0.13.0" }
hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git", rev = "1788474" }
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
